# Plop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DirectorySettings.h.in  Plop.sln  TODO.md  clean.bat  premake.bat  premake5.lua  setup.bat
Editor/: CMakeLists.txt
Editor/assets/icons/: editor.pdn  editor.ssdef  pause.pdn  play.pdn  playOnce.pdn  prefab.pdn  rotate.pdn  scale.pdn  stop.pdn  translate.pdn
Editor/src/: CMakeLists.txt  Editor.cpp  Editor.h
Plop/: Application.h  Plop.vcxproj  Plop.vcxproj.filters  premake5.lua
Plop/assets/icons/: editor.ssdef
Plop/src/: Application.cpp  Application.h  ApplicationLayer.h  Config.h  Constants.h  ImGuiPlatform.h  Log.cpp  Log.h  PlopInclude.h  Plop_pch.cpp  Plop_pch.h  TimeStep.cpp  TimeStep.h  Types.h  Window.h
Plop/src/Assets/: Asset.h  SoundLoader.cpp  SoundLoader.h  SpritesheetLoader.cpp  SpritesheetLoader.h  TextureLoader.cpp  TextureLoader.h
Plop/src/Audio/: AudioManager.cpp  AudioManager.h  Sound.cpp  Sound.h
Plop/src/Camera/: Camera.cpp  Camera.h  Camera2DController.cpp  Camera2DController.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Plop/src/Debug/: Debug.cpp  Debug.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiPlatform.cpp  Log.cpp  Log.h  MemoryTrack.hpp
Plop/src/ECS/: AudioEmitter.cpp  AudioEmitter.h  BaseComponents.cpp  BaseComponents.h  ComponentManager.cpp  ComponentManager.h  ECSHelper.cpp  ECSHelper.h  Entity.cpp  Entity.h  Entity.inl  EntityFlag.h  Level.cpp  Level.h  LevelBase.cpp  LevelBase.h  ParticleSpawners.cpp  ParticleSpawners.h  PhysicsComponents.cpp  PhysicsComponents.h  PrefabManager.cpp  PrefabManager.h  Serialisation.h  TransformComponent.cpp  TransformComponent.h
Plop/src/Editor/: Console.cpp  Console.h  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EditorStyle.h  UndoManager.cpp  UndoManager.h
Plop/src/Events/: EntityEvent.cpp  EntityEvent.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  GameEvent.h  IEventListener.h  WindowEvent.cpp  WindowEvent.h
Plop/src/Input/: Input.cpp  Input.h  InputKeyCodes.h
Plop/src/Math/: Curves.cpp  Curves.h  Math.h
Plop/src/Renderer/: Buffers.cpp  Buffers.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  RendererConfig.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteFwd.h  Spritesheet.cpp  Spritesheet.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Plop/src/UI/: Dialog.cpp  Dialog.h  IUIElement.cpp  IUIElement.h  UIForward.h  UIIncludes.h
Plop/src/Utils/: CircleBuffer.h  CircleBuffer.inl  DirectoryWatcher.cpp  DirectoryWatcher.h  DynamicArray.h  DynamicArray.inl  EnumFlags.h  GUID.cpp  GUID.h  JsonTypes.cpp  JsonTypes.h  OSDialogs.h  Random.cpp  (+6 more)
PlopCore/: CMakeLists.txt
PlopCore/data/shaders/: flatColor.glsl
PlopCore/src/: Application.cpp  Application.h  ApplicationLayer.h  CMakeLists.txt  Config.h  FileWatcher.cpp  FileWatcher.h  PlopInclude.h  TimeStep.cpp  TimeStep.h  Types.h  Window.h
PlopCore/src/Assets/: Asset.h  SoundLoader.cpp  SoundLoader.h  SpritesheetLoader.cpp  TextureLoader.cpp  TextureLoader.h
PlopCore/src/Audio/: AudioManager.cpp  AudioManager.h  Sound.cpp  Sound.h
PlopCore/src/Camera/: Camera.cpp  Camera.h  Camera2DController.cpp  Camera2DController.h
PlopCore/src/Debug/: Debug.cpp  Debug.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiPlatform.cpp  Log.cpp  Log.h  MemoryTrack.hpp
PlopCore/src/ECS/: ComponentManager.cpp  ComponentManager.h  ECSHelper.cpp  ECSHelper.h  Entity.cpp  Entity.h  Entity.inl  LevelBase.cpp  LevelBase.h  ParticleSpawners.cpp  ParticleSpawners.h  PrefabManager.cpp  Serialisation.h
PlopCore/src/ECS/Components/: BaseComponents.cpp  BaseComponents.h  ComponentDefinition.h  ComponentIncludes.h  Component_AudioEmitter.cpp  Component_AudioEmitter.h  Component_Camera.cpp  Component_Camera.h  Component_ParticleSystem.cpp  Component_ParticleSystem.h  Component_Physics.cpp  Component_Physics.h  Component_PrefabInstance.cpp  Component_SpriteRenderer.cpp  Component_SpriteRenderer.h  Component_Transform.cpp  Component_Transform.h
PlopCore/src/Editor/: Console.cpp  Console.h  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EditorStyle.h  UndoManager.cpp  UndoManager.h
PlopCore/src/Events/: EntityEvent.cpp  EntityEvent.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  IEventListener.h  WindowEvent.cpp
PlopCore/src/Input/: Input.cpp  Input.h  InputKeyCodes.h
PlopCore/src/Math/: Curves.cpp  Curves.h
PlopCore/src/Platform/OpenGL/: OpenGLWin32_Context.cpp  OpenGLWin32_Context.h  OpenGL_Buffers.cpp  OpenGL_Debug.cpp  OpenGL_FrameBuffer.cpp  OpenGL_FrameBuffer.h  OpenGL_Renderer.cpp  OpenGL_Renderer.h  OpenGL_Shader.cpp  OpenGL_Texture.cpp  OpenGL_Texture.h  OpenGL_VertexArray.cpp  OpenGL_VertexArray.h
PlopCore/src/Platform/Win32/: Win32_Input.cpp  Win32_OSDialogs.cpp  Win32_Window.cpp
PlopCore/src/Renderer/: Buffers.cpp  Buffers.h  FrameBuffer.cpp  FrameBuffer.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Spritesheet.cpp  Spritesheet.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
PlopCore/src/Utils/: DirectoryWatcher.cpp  DirectoryWatcher.h  EnumFlags.h  GUID.cpp  GUID.h  JsonTypes.cpp  JsonTypes.h  OSDialogs.h  Random.cpp  Random.h  Utils.cpp  Utils.h  imgui_custom.cpp  imgui_custom.h
Sample/: CMakeLists.txt  Sample.vcxproj  Sample.vcxproj.filters  premake.bat  premake5.lua
Sample/data/levels/: test.json  test.level  test.lvl
Sample/src/: CMakeLists.txt  SampleApp.cpp  SampleApp.h  SampleComponents.cpp  SampleComponents.h  SampleLayer.cpp  SampleLayer.h  SampleLevel.cpp  SampleLevel.h  Sample_pch.cpp  Sample_pch.h
TD/: GDD - doc design.txt  premake5.lua
TD/src/: Level.cpp  Level.h  TDApp.cpp  TDApp.h  TDEvents.h  TDLevel.cpp  TDLevel.h  TD_pch.cpp  TD_pch.h  WorldLayer.cpp  WorldLayer.h
Tools/ListGameTargets/: main.cpp
UnitTests/src/: UnitTestMain.cpp  UnitTestMain.h
data/shaders/: textured.glsl  vertexColor.glsl
(+92 files in other folders)
